infra/kustomize/challenge-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge-app
spec:
  selector:
    app: challenge-app
  ports:
  - name: tcp3000
    port: 3000
